# GeometricModeling

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Resources.qrc  camera.cpp  camera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene.cpp  scene.h
Camera/: camera.cpp  camera.h
Controls/: controls.cpp  controls.h  controls.ui  intersectdialog.cpp  intersectdialog.h  intersectdialog.ui  intersectiontexturedialog.cpp  intersectiontexturedialog.h  intersectiontexturedialog.ui  scenecontrols.cpp  scenecontrols.h  scenecontrols.ui
Controls/Modules/BSplineModule/: bsplinemodule.cpp  bsplinemodule.h  bsplinemodule.ui
Controls/Modules/BrezierCurveModule/: breziercurvemodule.cpp  breziercurvemodule.h  breziercurvemodule.ui
Controls/Modules/CNCRouterModule/: cncroutermodule.cpp  cncroutermodule.h  cncroutermodule.ui
Controls/Modules/CurveModule/: curvemodule.cpp  curvemodule.h  curvemodule.ui
Controls/Modules/IntersectionInstanceModule/: intersectioninstancemodule.cpp  intersectioninstancemodule.h  intersectioninstancemodule.ui
Controls/Modules/IntersectionModule/: intersectionmodule.cpp  intersectionmodule.h  intersectionmodule.ui
Controls/Modules/MoveModule/: movemodule.cpp  movemodule.h  movemodule.ui
Controls/Modules/ObjectModule/: objectmodule.cpp  objectmodule.h  objectmodule.ui
Controls/Modules/ParametricModule/: parametricmodule.cpp  parametricmodule.h  parametricmodule.ui
Controls/Modules/PatchCreatorModule/: patchcreatormodule.cpp  patchcreatormodule.h  patchcreatormodule.ui
Controls/Modules/PatchModule/: patchmodule.cpp  patchmodule.h  patchmodule.ui
Controls/Modules/ScreenMoveModule/: screenmovemodule.cpp  screenmovemodule.h  screenmovemodule.ui
Controls/Modules/TorusModule/: torusmodule.cpp  torusmodule.h  torusmodule.ui
Controls/Modules/TransformModule/: transformmodule.cpp  transformmodule.h  transformmodule.ui
DirectX/: Renderer.h  renderer.h  stereoscopicRenderer.h
DirectX/DXDevice/: compressed_pair.h  dxDevice.cpp  dxDevice.h  dxptr.h  exceptions.h  ptr_vector.h
DirectX/DXRenderer/: dxRenderer.cpp  dxRenderer.h
DirectX/DXStructures/: dxStructures.cpp  dxStructures.h
Ellipsoid/: ellipsoid.cpp  ellipsoid.h
Handlers/: inputHandler.cpp  inputHandler.h  intersectHandler.cpp  intersectHandler.h  screenTransform.cpp  screenTransform.h
Object/: object.cpp  object.h
ObjectListItem/: objectListItem.cpp  objectListItem.h
Objects/: creator.h  linelist.cpp  linelist.h  linestrip.cpp  linestrip.h  object.cpp  object.h  objectFactory.cpp  objectFactory.h  renderable.cpp  renderable.h  updatable.h
Objects/Brezier/: brezierC0.h  brezierC2.cpp  brezierC2.h  brezierCurve.cpp  brezierCurve.h
Objects/BrezierC0/: brezierC0.cpp  brezierC0.h
Objects/BrezierC2/: brezierC2.cpp  brezierC2.h
Objects/BrezierCurve/: brezierCurve.cpp  brezierCurve.h
Objects/CNC/: CNCRouter.cpp  CNCRouter.h  CNCTool.cpp  CNCTool.h  mesh.cpp  mesh.h
Objects/CNCRouter/: CNCRouter.cpp  CNCRouter.h
Objects/CompositeObject/: compositeObject.cpp  compositeObject.h
Objects/Cursor/: cursor.cpp  cursor.h
Objects/Curve/: brezierC0.cpp  brezierC0.h  brezierC2.cpp  brezierC2.h  brezierCurve.cpp  brezierCurve.h  curve.cpp  curve.h  interpolationCurveC2.cpp  interpolationCurveC2.h
Objects/Grid/: grid.cpp  grid.h
Objects/Intersection/: intersection.cpp  intersection.h  intersectionInstance.cpp  intersectionInstance.h
Objects/Object/: object.cpp  object.h
Objects/ObjectListItem/: objectListItem.cpp  objectListItem.h
Objects/Parametric/: parametricObject.h  toolDistantSurface.cpp  toolDistantSurface.h  torus.cpp  torus.h
Objects/ParametricObject/: parametricObject.h
Objects/Patch/: bicubicC0.cpp  bicubicC0.h  bicubicC0Creator.cpp  bicubicC0Creator.h  bicubicC2.cpp  bicubicC2.h  bicubicC2Creator.cpp  bicubicC2Creator.h  gregoryPatch.cpp  gregoryPatch.h  patch.cpp  patch.h  patchCreator.h
Objects/Point/: composableVirtualPoint.cpp  composableVirtualPoint.h  point.cpp  point.h  virtualPoint.cpp  virtualPoint.h  virtualPointsHolder.h
Objects/Torus/: torus.cpp  torus.h
Objects/VirtualPoint/: virtualPoint.cpp  virtualPoint.h
Objects/VirtualPointsHolder/: virtualPointsHolder.h
RenderThread/: renderThread.cpp  renderThread.h
Renderer/: Renderer.h  renderer.cpp  renderer.h  renderer.ui
Saves/: mug.json  mug2.json  mug2v2.json  mug2v3.json  mug_final.json  mug_final2.json  mug_final_v2.json  mug_rura.json  mug_rurav2.json  mug_rurav3.json  mug_rurav4.json  new_mug_mid1.json  new_mug_mid2.json  new_mug_mid3.json
Scene/: scene.cpp  scene.h
Shader/: Header.hlsl  Header.hlsli  csHeight.hlsl  csNormal.hlsl  ds.hlsl  dsBicubic.hlsl  dsBicubicDeBoor.hlsl  dsBrezier.hlsl  dsGregory.hlsl  dsInterpolation.hlsl  gsPoint.hlsl  hs.hlsl  hsBicubic.hlsl  hsBrezier.hlsl  hsGregory.hlsl  hsInterpolation.hlsl  ps.hlsl  psCameraFade.hlsl  psParam.hlsl  psPhong.hlsl  psPhongTex.hlsl  psSelector.hlsl  psStereo.hlsl  psTexture.hlsl  vs.hlsl  vsBillboard.hlsl  vsNoProjection.hlsl  vsParam.hlsl  vsPhong.hlsl  vsPhongTex.hlsl  vsSelector.hlsl  vsStereo.hlsl  vsTexture.hlsl
Styles/: style.qss
Utils/: Utils3D.cpp  Utils3D.h  fileParser.cpp  fileParser.h  gregoryUtils.cpp  gregoryUtils.h  pathsCreator.cpp  pathsCreator.h  pathsCreatorHelper.cpp  pathsCreatorHelper.h  utils3D.cpp  utils3D.h
Window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
